--- a/article-fontaine.html
+++ b/article-fontaine.html
@@ -3,24 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Top 3 des meilleures fontaines à eau pour chien (Guide 2024)</title>
-  <meta name="description" content="Top 3 2024 des fontaines à eau pour chien : comparatif, avis, et conseils pour hydrater ton compagnon avec style et efficacité.">
+  <title>Top 3 des meilleures fontaines à eau pour chien en 2024</title>
+  <meta name="description" content="Découvre notre sélection des meilleures fontaines à eau pour chien. Hydrate ton compagnon avec des modèles pratiques, silencieux et design.">
+  <meta name="theme-color" content="#00AEEF" />
+
 
   <!-- Open Graph Facebook -->
-  <meta property="og:title" content="Top 3 des meilleures fontaines à eau pour chien (Guide 2024)" />
-  <meta property="og:description" content="Top 3 2024 : fontaines pratiques, silencieuses et design pour chiens. Notre comparatif complet !" />
+  <meta property="og:title" content="Top 3 des meilleures fontaines à eau pour chien en 2024" />
+  <meta property="og:description" content="Découvre notre sélection de fontaines à eau pratiques et silencieuses pour ton compagnon à quatre pattes." />
   <meta property="og:image" content="URL_DE_TA_IMAGE" />
   <meta property="og:url" content="URL_DE_TA_PAGE" />
   <meta property="og:type" content="article" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Top 3 des meilleures fontaines à eau pour chien (Guide 2024)" />
-  <meta name="twitter:description" content="Découvre les meilleures fontaines pour ton chien, avec avis et conseils pratiques !" />
+  <meta name="twitter:title" content="Top 3 des meilleures fontaines à eau pour chien en 2024" />
+  <meta name="twitter:description" content="Découvre les meilleures fontaines pour ton chien, sélectionnées avec soin." />
   <meta name="twitter:image" content="URL_DE_TA_IMAGE" />
 
   <link rel="stylesheet" href="style.css" />
-</head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Product",
+  "name": "PetSafe Drinkwell Platinum",
+  "image": "https://a.media-amazon.com/images/I/71FjyEc8DgL._AC_SL1500_.jpg",
+  "description": "Fontaine cascade pour chien de 5L avec filtre à charbon pour une eau fraîche.",
+  "brand": {
+    "@type": "Brand",
+    "name": "PetSafe"
+  },
+  "review": {
+    "@type": "Review",
+    "author": "Sophie M.",
+    "reviewBody": "Depuis que j'ai la PetSafe, mon chien boit plus régulièrement. Ultra silencieuse !",
+    "reviewRating": {
+      "@type": "Rating",
+      "ratingValue": "5",
+      "bestRating": "5"
+    }
+  }
+}
+</script>
 
 <script type="application/ld+json">
 {
@@ -32,7 +58,7 @@
       "name": "Quelle est la meilleure fontaine pour un chiot ?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Pour un chiot, choisis une fontaine basse avec un débit doux, comme la PetSafe Drinkwell Platinum."
+        "text": "Un modèle bas avec débit doux comme la PetSafe Drinkwell Platinum est idéal pour les chiots."
       }
     },
     {
@@ -40,100 +66,180 @@
       "name": "Comment nettoyer une fontaine à eau pour chien ?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Nettoie chaque semaine avec de l'eau chaude et du savon doux, et change le filtre tous les mois."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "Quelle est la meilleure fontaine pour un gros chien ?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Privilégie une fontaine de grande capacité (8L minimum) comme la NPET DF30."
+        "text": "Utilise de l'eau chaude et du savon doux chaque semaine. Change le filtre tous les mois environ."
       }
     }
   ]
 }
 </script>
 
+</head>
+
 <body>
 
-  <header>
-    <h1>Top 3 des meilleures fontaines à eau pour chien (Guide 2024) 💧</h1>
-  </header>
+<header>
+  <h1>Top 3 des meilleures fontaines à eau pour chien en 2024 💧</h1>
+</header>
 
-  <div class="container">
-    <article>
+<div class="container">
+<article>
 
-      <p>Un chien en pleine forme commence par une bonne hydratation 🐶💧. Dans ce guide 2024, découvre les meilleures fontaines à eau pour chien : silencieuses, pratiques et au top du design. Trouve celle qui correspond parfaitement à ton compagnon !</p>
+<p>Garder ton chien bien hydraté est essentiel pour sa santé. Voici notre sélection des meilleures fontaines à eau pour garantir fraîcheur, propreté et confort à ton compagnon à quatre pattes 🐶.</p>
 
-      <nav class="table-des-matieres">
-        <h2>Sommaire</h2>
-        <ul>
-          <li><a href="#pourquoi-fontaine">Pourquoi une fontaine à eau est indispensable pour ton chien ?</a></li>
-          <li><a href="#comment-choisir">Comment bien choisir la meilleure fontaine à eau pour chien ?</a></li>
-          <li><a href="#selection-top3">Comparatif 2024 : Top 3 des meilleures fontaines pour chien</a></li>
-          <li><a href="#faq">FAQ - Tes questions fréquentes</a></li>
-        </ul>
-      </nav>
+<nav>
+  <ul>
+    <li><a href="#pourquoi-fontaine">Pourquoi choisir une fontaine à eau pour chien ?</a></li>
+    <li><a href="#comment-choisir">Comment choisir la bonne fontaine ?</a></li>
+    <li><a href="#conseils">Conseils hydratation</a></li>
+    <li><a href="#selection-top3">Notre Top 3</a></li>
+    <li><a href="#avis">Avis utilisateurs</a></li>
+    <li><a href="#faq">FAQ</a></li>
+  </ul>
+</nav>
 
-      <h2 id="pourquoi-fontaine">Pourquoi une fontaine à eau est indispensable pour ton chien ?</h2>
-      <p>Les chiens préfèrent l'eau fraîche en mouvement. Une fontaine stimule leur envie de boire, réduit les risques de déshydratation et garde l'eau propre grâce à la filtration.</p>
+<h2 id="pourquoi-fontaine">Pourquoi choisir une fontaine à eau pour chien ?</h2>
+<ul>
+  <li>Stimule l’envie de boire grâce à l’eau en mouvement.</li>
+  <li>Réduit les risques de déshydratation et de maladies rénales.</li>
+  <li>Garde l’eau propre et fraîche toute la journée.</li>
+  <li>Moins de corvée de remplissage pour toi !</li>
+</ul>
+<p>En savoir plus sur <a href="https://www.ordre-veterinaire.fr/" target="_blank" rel="noopener noreferrer">l'importance de l'hydratation selon les vétérinaires</a>.</p>
 
-      <h2 id="comment-choisir">Comment bien choisir la meilleure fontaine à eau pour chien ?</h2>
-      <h3>💧 Capacité</h3>
-      <p>Adapte la taille de la fontaine à ton chien et au nombre d'animaux à la maison.</p>
+<h2 id="comment-choisir">Comment choisir la meilleure fontaine ?</h2>
+<h3>💧 Capacité</h3>
+<p>Adapte la taille de la fontaine à ton chien et au nombre d'animaux à la maison.</p>
+<h3>🛠️ Facilité d'entretien</h3>
+<p>Privilégie les modèles faciles à démonter et à nettoyer régulièrement.</p>
+<h3>🔇 Niveau sonore</h3>
+<p>Les pompes silencieuses sont plus agréables pour toi et moins stressantes pour ton animal.</p>
+<p>La meilleure fontaine à eau pour chien en 2024 doit allier capacité, filtration et silence pour un usage quotidien. Choisir une fontaine automatique pour animaux garantit une hydratation optimale, même lorsque tu es absent.</p>
 
-      <h3>🛠️ Facilité d'entretien</h3>
-      <p>Privilégie les modèles faciles à démonter et à nettoyer pour garantir une eau saine.</p>
+<p>Une fontaine silencieuse réduit le stress de ton compagnon et l'encourage à boire plus souvent. C’est un vrai plus pour sa santé, notamment pendant les fortes chaleurs estivales.</p>
 
-      <h3>🔇 Niveau sonore</h3>
-      <p>Opte pour une pompe silencieuse, plus agréable pour toi et ton animal.</p>
+<p>Notre sélection 2024 rassemble les modèles de fontaines à eau les plus fiables pour chiens et chats, afin de te simplifier la vie et d'assurer le bien-être de ton animal.</p>
 
-      <h2 id="selection-top3">Comparatif 2024 : Top 3 des meilleures fontaines pour chien</h2>
 
-      <div class="produit">
-        <h3><span class="badge">🥇 Top 1</span> PetSafe Drinkwell Platinum – Fontaine en cascade (5 L)</h3>
-        <img src="https://a.media-amazon.com/images/I/71FjyEc8DgL._AC_SL1500_.jpg" alt="Fontaine à eau PetSafe Drinkwell Platinum" loading="lazy">
-        <p><strong>Pourquoi choisir la PetSafe Drinkwell Platinum ?</strong> Cascade naturelle, grande capacité de 5L, filtre à charbon actif pour une eau toujours fraîche. Idéale pour chiens de taille moyenne à grande.</p>
-        <p><em>👉 Clique ci-dessous pour voir le prix et les avis clients !</em></p>
-        <a href="https://amzn.to/430sArF" target="_blank" rel="noopener noreferrer" class="bouton">Voir sur Amazon →</a>
-      </div>
+<h2 id="conseils">Conseils pour garder ton chien bien hydraté 💧</h2>
+<ul>
+  <li>Change l'eau de la fontaine tous les jours.</li>
+  <li>Place la fontaine à l'ombre, surtout en été.</li>
+  <li>Nettoie complètement la fontaine chaque semaine.</li>
+  <li>Vérifie le niveau d'eau matin et soir.</li>
+</ul>
 
-      <div class="produit">
-        <h3><span class="badge">🥈 Top 2</span> NPET DF30 – Fontaine automatique (8 L)</h3>
-        <img src="https://a.media-amazon.com/images/I/71mDEpIJlqL._AC_SL1500_.jpg" alt="Fontaine à eau NPET DF30" loading="lazy">
-        <p><strong>Pourquoi choisir la NPET DF30 ?</strong> Idéale pour plusieurs chiens avec sa capacité de 8L, filtration triple, pompe ultra silencieuse pour une hydratation sans stress.</p>
-        <p><em>👉 Découvre les avis et le meilleur prix !</em></p>
-        <a href="https://amzn.to/4jt37gw" target="_blank" rel="noopener noreferrer" class="bouton">Voir sur Amazon →</a>
-      </div>
+<h2 id="selection-top3">Notre sélection Top 3</h2>
 
-      <div class="produit">
-        <h3><span class="badge">🥉 Top 3</span> Kittyspout – Fontaine sans fil (8 L)</h3>
-        <img src="https://a.media-amazon.com/images/I/816ec2F6sOL._AC_SL1500_.jpg" alt="Fontaine à eau sans fil Kittyspout" loading="lazy">
-        <p><strong>Pourquoi choisir la Kittyspout ?</strong> Fontaine sans fil innovante avec capteur de mouvement, batterie 5000 mAh pour 30 jours d'autonomie. Parfaite pour un usage pratique et design.</p>
-        <p><em>👉 Voir les avis et le prix en ligne !</em></p>
-        <a href="https://amzn.to/42tw7yz" target="_blank" rel="noopener noreferrer" class="bouton">Voir sur Amazon →</a>
-      </div>
-
-      <h2 id="faq">FAQ - Tes questions fréquentes</h2>
-
-      <h3>Quelle est la meilleure fontaine pour un chiot ?</h3>
-      <p>Pour un chiot, choisis une fontaine basse avec un débit doux comme la PetSafe Drinkwell Platinum.</p>
-
-      <h3>Comment nettoyer une fontaine à eau pour chien ?</h3>
-      <p>Nettoie la fontaine chaque semaine avec de l'eau chaude et du savon doux. Change le filtre tous les mois environ.</p>
-
-      <h3>Quelle est la meilleure fontaine pour un gros chien ?</h3>
-      <p>Opte pour une fontaine grande capacité comme la NPET DF30 (8L) pour répondre aux besoins d'un grand chien.</p>
-
-      <a href="index.html" class="back">← Retour à l'accueil</a>
-
-    </article>
+<div class="produit fade-in">
+  <h3><span class="badge">🥇 Top 1</span> PetSafe Drinkwell Platinum – Fontaine en cascade (5 L)</h3>
+  <img src="https://a.media-amazon.com/images/I/71FjyEc8DgL._AC_SL1500_.jpg" alt="Fontaine à eau PetSafe Drinkwell Platinum" loading="lazy">
+  <p>Fontaine cascade avec une capacité de 5 litres et filtre à charbon. Parfaite pour chien moyen à grand.</p>
+  <a href="https://amzn.to/430sArF" target="_blank" rel="noopener noreferrer" class="bouton">Voir ce modèle sur Amazon →</a>
+</div>
+<div class="product-rating" data-rating="4.5">
+  <div class="stars">
+    <!-- Les étoiles seront générées en JS -->
   </div>
+  <span class="rating-text">(4.5/5)</span>
+</div>
 
-  <footer>
-    <p>© 2024 - Mon Blog Animalier | <a href="politique-de-confidentialite.html">Politique de confidentialité</a></p>
-  </footer>
+
+<div class="produit fade-in">
+  <h3><span class="badge">🥈 Top 2</span> NPET DF30 – Fontaine automatique (8 L)</h3>
+  <img src="https://a.media-amazon.com/images/I/71mDEpIJlqL._AC_SL1500_.jpg" alt="Fontaine à eau NPET DF30" loading="lazy">
+  <p>Grande capacité (8L), filtration triple, pompe ultra silencieuse. Idéale pour plusieurs animaux.</p>
+  <a href="https://amzn.to/4jt37gw" target="_blank" rel="noopener noreferrer" class="bouton">Voir ce modèle sur Amazon →</a>
+</div>
+<div class="product-rating" data-rating="4.5">
+  <div class="stars">
+    <!-- Les étoiles seront générées en JS -->
+  </div>
+  <span class="rating-text">(4.5/5)</span>
+</div>
+
+<div class="produit fade-in">
+  <h3><span class="badge">🥉 Top 3</span> Kittyspout – Fontaine sans fil (8 L)</h3>
+  <img src="https://a.media-amazon.com/images/I/816ec2F6sOL._AC_SL1500_.jpg" alt="Fontaine à eau sans fil Kittyspout" loading="lazy">
+  <p>Fontaine sans fil à capteur de mouvement, batterie rechargeable 5000mAh pour 30 jours d'autonomie.</p>
+  <a href="https://amzn.to/42tw7yz" target="_blank" rel="noopener noreferrer" class="bouton">Voir ce modèle sur Amazon →</a>
+</div>
+<div class="product-rating" data-rating="4.5">
+  <div class="stars">
+    <!-- Les étoiles seront générées en JS -->
+  </div>
+  <span class="rating-text">(4.5/5)</span>
+</div>
+
+
+<h2 id="avis">Avis sur les fontaines 🐶</h2>
+<blockquote>"Depuis que j'ai la PetSafe, mon chien boit plus régulièrement. Ultra silencieuse !" — Sophie M.</blockquote>
+<blockquote>"Très pratique avec plusieurs chiens. Entretien facile et eau toujours propre." — Julien D.</blockquote>
+
+<h2 id="faq">FAQ – Questions fréquentes</h2>
+
+<h3>Quelle est la meilleure fontaine pour un chiot ?</h3>
+<p>Un modèle bas avec débit doux comme la PetSafe Drinkwell Platinum est idéal.</p>
+
+<h3>Comment nettoyer une fontaine à eau pour chien ?</h3>
+<p>Utilise de l'eau chaude et du savon doux chaque semaine. Change le filtre tous les mois environ.</p>
+<section class="cta-final">
+  <h2>Prêt à offrir la meilleure laisse à ton chien ?</h2>
+  <p>Découvre toutes nos laisses recommandées pour assurer beauté et confort à ton toutou, fraîcheur et bien-être à ton compagnon !</p>
+  <a href="article-laisses.html" class="bouton-principal">Voir nos conseils laisses  ➔</a>
+</section>
+
+<a href="index.html" class="back">← Retour à l'accueil</a>
+
+</article>
+</div>
+
+
+<footer>
+  <p>© 2024 - Mon Blog Animalier | <a href="politique-de-confidentialite.html">Politique de confidentialité</a></p>
+</footer>
+<script>
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('visible');
+      }
+    });
+  });
+
+  document.querySelectorAll('.fade-in').forEach(section => {
+    observer.observe(section);
+  });
+</script>
+<script>
+document.querySelectorAll('nav ul li a').forEach(link => {
+  link.addEventListener('click', function() {
+    document.querySelectorAll('nav ul li a').forEach(el => el.classList.remove('active-link'));
+    this.classList.add('active-link');
+  });
+});
+</script>
+<script>
+const sections = document.querySelectorAll('h2[id]');
+const navLinks = document.querySelectorAll('nav ul li a');
+
+window.addEventListener('scroll', () => {
+  let current = '';
+  
+  sections.forEach(section => {
+    const sectionTop = section.offsetTop;
+    if (pageYOffset >= sectionTop - 100) {
+      current = section.getAttribute('id');
+    }
+  });
+
+  navLinks.forEach(link => {
+    link.classList.remove('active-link');
+    if (link.getAttribute('href') === '#' + current) {
+      link.classList.add('active-link');
+    }
+  });
+});
+</script>
 
 </body>
 </html>
