--- a/index.html
+++ b/index.html
@@ -1,50 +1,147 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ToutouStyle - Accessoires pour petits chiens</title>
-  <meta name="description" content="ToutouStyle t'aide à trouver les meilleurs accessoires stylés pour ton petit chien : laisses, harnais, fontaines à eau, et plus encore.">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Blog ToutouStyle : Astuces, Conseils et Équipement pour Petits Chiens</title>
+  <meta name="description" content="Découvrez nos conseils et guides pour bien équiper votre petit chien. Colliers, laisses, harnais, fontaines à eau et plus encore !">
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Blog ToutouStyle - Équipement pour Petits Chiens">
+  <meta property="og:description" content="Trouvez les meilleurs accessoires pour votre petit chien : laisses stylées, harnais confortables, fontaines à eau et bien plus.">
+  <meta property="og:image" content="https://www.toutoustyle.com/images/og-image.jpg">
+  <meta property="og:url" content="https://www.toutoustyle.com">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Blog ToutouStyle - Équipement pour Petits Chiens">
+  <meta name="twitter:description" content="Découvrez nos conseils et sélections d’accessoires pour chouchouter votre petit chien.">
+  <meta name="twitter:image" content="https://www.toutoustyle.com/images/twitter-card.jpg">
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Blog",
+    "name": "ToutouStyle",
+    "description": "Blog spécialisé dans l’équipement pour petits chiens : conseils, comparatifs et tendances.",
+    "url": "https://www.toutoustyle.com",
+    "publisher": {
+      "@type": "Organization",
+      "name": "ToutouStyle",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://www.toutoustyle.com/images/logo.png"
+      }
+    }
+  }
+  </script>
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <header>
-    <h1>Bienvenue sur ToutouStyle 🐾</h1>
-  </header>
+<header>
+  <h1>Bienvenue sur ToutouStyle : Le meilleur de l’équipement pour votre petit chien !</h1>
+</header>
 
-  <div class="container">
-    <p><strong>Ta source n°1</strong> pour équiper ton petit chien avec style et à petit prix 🐶</p>
+<section id="introduction">
+  <p>Bienvenue sur ToutouStyle ! Ici, on parle 100% équipement pour petits chiens : accessoires stylés, conseils pratiques et comparatifs malins pour bichonner votre compagnon à quatre pattes.</p>
 
-    <h2>🔥 Produit du moment</h2>
-    <p>💧 Découvre notre sélection de <strong>fontaines à eau pour chien</strong> : top pour l'hygiène, le confort et l’esthétique !</p>
-    <a href="article-fontaine.html" class="bouton">Voir le Top 3 des fontaines</a>
-
-    <h2>📝 Derniers articles du blog</h2>
+  <nav>
     <ul>
-      <li><a href="article-laisses.html">5 laisses stylées à moins de 20€</a></li>
-      <li><a href="article-harnais.html">Comment bien choisir un harnais pour petit chien</a></li>
-      <li><a href="article-colliers.html">Comparatif des colliers pour petit chien</a></li>
-      <li><a href="article-nourriture.html">Nourriture pour chien sensible : nos conseils</a></li>
+      <li><a href="#pourquoi-suivre">Pourquoi suivre ToutouStyle ?</a></li>
+      <li><a href="#categories">Nos catégories populaires</a></li>
+      <li><a href="#articles-recents">Articles récents</a></li>
+      <li><a href="#cta">Ne manquez rien !</a></li>
     </ul>
+  </nav>
+</section>
 
-    <a href="blog.html" class="bouton">📚 Accéder à tous les articles</a>
+<section id="pourquoi-suivre">
+  <h2>Pourquoi suivre ToutouStyle ?</h2>
+  <p>Parce qu’on sait que votre toutou mérite ce qu’il y a de mieux, on teste, compare et recommande uniquement des produits adaptés aux petits chiens : harnais, colliers, fontaines à eau et plus encore.</p>
+</section>
 
-    <h2>💡 Pourquoi suivre ToutouStyle ?</h2>
-    <ul>
-      <li>✅ Des guides pratiques et simples</li>
-      <li>✅ Des produits testés et stylés</li>
-      <li>✅ Des conseils pensés pour les petits chiens</li>
-    </ul>
+<section id="categories">
+  <h2>Nos catégories populaires</h2>
+  <ul>
+    <li>Harnais et Colliers pour petits chiens</li>
+    <li>Laisses stylées et pratiques</li>
+    <li>Nourriture spéciale chiens sensibles</li>
+    <li>Fontaines à eau et accessoires bien-être</li>
+  </ul>
+</section>
 
-    <p><em>Et si tu veux recevoir nos nouveautés directement dans ta boîte mail, une newsletter arrive bientôt !</em></p>
+<section id="articles-recents">
+  <h2>Articles récents</h2>
+  <ul>
+    <li><a href="article-fontaine.html">Top 3 des fontaines à eau pour chien</a></li>
+    <li><a href="article-laisses.html">5 laisses stylées à moins de 20€</a></li>
+    <li><a href="article-harnais.html">Comment bien choisir un harnais pour petit chien</a></li>
+    <li><a href="article.nourriture.html">Nourriture pour chien sensible : nos conseils</a></li>
+    <li><a href="article-colliers.html>Comparatif : colliers pour petit chien</a></li>
+  </ul>
+</section>
 
-  </div>
+<section id="top-produits">
+  <h2>Nos coups de cœur équipement pour petits chiens</h2>
+  <article>
+    <h3>Fontaine à Eau PetSafe®</h3>
+    <p>Note : ⭐⭐⭐⭐☆ (4,5/5)</p>
+    <p>Hydratez votre compagnon avec une eau toujours fraîche. Idéal pour les petits chiens !</p>
+    <a href="https://amzn.to/430sArF" class="button">Voir la fontaine</a>
+  </article>
 
-  <footer>
-    <p>&copy; 2025 ToutouStyle. Blog d'affiliation pour les passionnés de petits chiens 🐕‍🦺</p>
-  </footer>
+  <article>
+    <h3>Harnais Puppia Soft Harness</h3>
+    <p>Note : ⭐⭐⭐⭐⭐ (5/5)</p>
+    <p>Confort maximal pour les petits chiens. Léger, respirant et ultra stylé !</p>
+    <a href="https://amzn.to/3YO4Lkp" class="button">Découvrir le harnais</a>
+  </article>
+</section>
+
+<section id="temoignages">
+  <h2>Ils adorent ToutouStyle !</h2>
+  <blockquote>
+    <p>"Grâce à ToutouStyle, j’ai trouvé le harnais parfait pour mon Chihuahua, il est trop mignon !"</p>
+    <cite>- Sophie, Paris</cite>
+  </blockquote>
+
+  <blockquote>
+    <p>"Les sélections d’accessoires sont au top, ma petite Lili adore sa nouvelle laisse."</p>
+    <cite>- Julien, Lyon</cite>
+  </blockquote>
+</section>
+
+<section id="faq">
+  <h2>FAQ</h2>
+  <h3>Quels types d'articles trouve-t-on sur ToutouStyle ?</h3>
+  <p>Des guides d’achat, des conseils pratiques et des comparatifs spécialisés pour les petits chiens.</p>
+
+  <h3>Comment ToutouStyle choisit ses produits ?</h3>
+  <p>On teste nous-mêmes certains produits et on analyse les avis clients pour ne recommander que le meilleur.</p>
+</section>
+
+<section id="cta">
+  <h2>Ne manquez rien !</h2>
+  <p>Envie de recevoir nos derniers conseils et bons plans pour votre petit chien ?</p>
+  <a href="/newsletter" class="button">Je m’abonne !</a>
+</section>
+
+<footer>
+  <ul>
+    <li><a href="/politique-confidentialite">Politique de confidentialité</a></li>
+    <li><a href="/mentions-legales">Mentions légales</a></li>
+    <li><a href="/categories">Catégories</a></li>
+    <li><a href="/contact">Contact</a></li>
+  </ul>
+  <p>Suivez-nous : 
+    <a href="https://instagram.com/toutoustyle">Instagram</a> | 
+    <a href="https://facebook.com/toutoustyle">Facebook</a>
+  </p>
+</footer>
 
 </body>
 </html>
