--- a/blog.html
+++ b/blog.html
@@ -1,32 +1,163 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ToutouStyle - Blog</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Blog ToutouStyle : Astuces & Équipements Stylés pour Petits Chiens</title>
+  <meta name="description" content="Découvrez nos conseils, comparatifs et guides pour bien équiper votre petit chien : laisses, harnais, colliers, fontaines à eau et plus encore.">
+  <link rel="canonical" href="https://www.toutoustyle.fr/blog" />
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Blog ToutouStyle - Équipement Stylé pour Petits Chiens">
+  <meta property="og:description" content="Trouvez les meilleurs conseils et comparatifs pour chouchouter votre petit chien avec style.">
+  <meta property="og:image" content="https://www.toutoustyle.fr/assets/images/blog-cover.jpg">
+  <meta property="og:url" content="https://www.toutoustyle.fr/blog">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:title" content="Blog ToutouStyle - Équipement Stylé pour Petits Chiens">
+  <meta name="twitter:description" content="Trouvez les meilleurs conseils et comparatifs pour chouchouter votre petit chien avec style.">
+  <meta name="twitter:image" content="https://www.toutoustyle.fr/assets/images/blog-cover.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Blog",
+    "name": "ToutouStyle",
+    "description": "Blog de conseils, astuces et comparatifs pour bien équiper son petit chien.",
+    "url": "https://www.toutoustyle.fr/blog",
+    "publisher": {
+      "@type": "Organization",
+      "name": "ToutouStyle",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://www.toutoustyle.fr/assets/images/logo.png"
+      }
+    }
+  }
+  </script>
+
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #fafafa; color: #333; }
+    header, footer { background: #fff; padding: 20px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+    h1 { font-size: 2.2em; margin: 20px 0; }
+    nav a { margin: 0 10px; text-decoration: none; color: #0077cc; }
+    nav a:hover { text-decoration: underline; }
+    main { padding: 20px; max-width: 1000px; margin: auto; }
+    section { margin-bottom: 40px; }
+    h2 { font-size: 1.8em; margin-bottom: 10px; }
+    h3 { font-size: 1.4em; margin-top: 20px; }
+    ul { padding-left: 20px; }
+    .article-card { background: #fff; margin-bottom: 20px; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); transition: transform 0.3s; }
+    .article-card:hover { transform: translateY(-5px); }
+    .rating { color: #ffc107; }
+    .btn { display: inline-block; margin-top: 10px; padding: 10px 20px; background: #0077cc; color: #fff; text-decoration: none; border-radius: 5px; transition: background 0.3s; }
+    .btn:hover { background: #005fa3; }
+    footer a { color: #0077cc; margin: 0 8px; }
+    .fade-in { animation: fadeIn 1s ease forwards; opacity: 0; }
+    @keyframes fadeIn {
+      to { opacity: 1; }
+    }
+  </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <header>
-    <h1>Blog ToutouStyle 🐶</h1>
-  </header>
+<header class="fade-in">
+  <h1>Bienvenue sur ToutouStyle : Guide & Équipement Stylé pour Petits Chiens 🐶</h1>
+  <nav>
+    <a href="#pourquoi">Pourquoi suivre notre blog ?</a> |
+    <a href="#categories">Nos catégories populaires</a> |
+    <a href="#articles">Articles récents</a> |
+    <a href="#faq">FAQ</a>
+  </nav>
+</header>
 
-  <div class="container">
-    <p>Retrouve tous nos conseils, comparatifs et sélections stylées pour ton toutou adoré.</p>
+<main>
 
-    <h2>Nos derniers articles :</h2>
-    <ul class="liste-articles">
-      <li><a href="article-fontaine.html">Top 3 des fontaines à eau pour chien</a></li>
-      <li><a href="article-laisses.html">5 laisses stylées à moins de 20€</a></li>
-      <li><a href="article-harnais.html">Comment bien choisir un harnais pour petit chien</a></li>
-      <li><a href="article-nourriture.html">Nourriture pour chien sensible : nos conseils</a></li>
-      <li><a href="article-colliers.html">Comparatif : colliers pour petit chien</a></li>
+  <section id="pourquoi" class="fade-in">
+    <h2>Pourquoi suivre ToutouStyle ?</h2>
+    <p>Chez ToutouStyle, notre passion, ce sont les petits chiens ! On vous aide à choisir le meilleur équipement pour votre toutou adoré, avec style, confort et conseils avisés. 🐾</p>
+  </section>
+
+  <section id="categories" class="fade-in">
+    <h2>Nos catégories populaires</h2>
+    <ul>
+      <li>Laisses et harnais stylés</li>
+      <li>Fontaines à eau et accessoires pratiques</li>
+      <li>Alimentation pour petits chiens sensibles</li>
+      <li>Comparatifs de colliers et équipements</li>
     </ul>
+  </section>
 
-    <a href="index.html" class="bouton">← Retour à l'accueil</a>
-  </div>
+  <section id="articles" class="fade-in">
+    <h2>Nos derniers articles</h2>
+
+    <div class="article-card">
+      <h3>Top 3 des fontaines à eau pour chien</h3>
+      <div class="rating">⭐⭐⭐⭐☆ (4,5/5)</div>
+      <p>Offrez une hydratation optimale à votre petit chien avec notre comparatif des meilleures fontaines à eau !</p>
+      <a href="article-fontaine.html" class="btn">Lire l'article</a>
+    </div>
+
+    <div class="article-card">
+      <h3>5 laisses stylées à moins de 20€</h3>
+      <div class="rating">⭐⭐⭐⭐☆ (4/5)</div>
+      <p>Découvrez notre sélection de laisses aussi solides que stylées, sans exploser votre budget !</p>
+      <a href="articles-laisses.html" class="btn">Voir les modèles</a>
+    </div>
+
+    <div class="article-card">
+      <h3>Comment bien choisir un harnais pour petit chien</h3>
+      <div class="rating">⭐⭐⭐⭐⭐ (5/5)</div>
+      <p>Guide complet pour trouver le harnais parfait, confortable et adapté à la morphologie de votre compagnon.</p>
+      <a href="article-harnais.html" class="btn">Tout savoir</a>
+    </div>
+
+    <div class="article-card">
+      <h3>Nourriture pour chien sensible : nos conseils</h3>
+      <div class="rating">⭐⭐⭐⭐☆ (4,2/5)</div>
+      <p>Votre chien a l'estomac fragile ? Suivez nos astuces pour choisir une alimentation saine et adaptée.</p>
+      <a href="article-nourriture.html" class="btn">Nos conseils</a>
+    </div>
+
+    <div class="article-card">
+      <h3>Comparatif : colliers pour petit chien</h3>
+      <div class="rating">⭐⭐⭐⭐⭐ (5/5)</div>
+      <p>Top des colliers pour allier style, confort et sécurité à chaque promenade.</p>
+      <a href="article-colliers.html" class="btn">Découvrir</a>
+    </div>
+
+  </section>
+
+  <section id="faq" class="fade-in">
+    <h2>Questions fréquentes</h2>
+    <h3>Quels types d'articles trouve-t-on sur ToutouStyle ?</h3>
+    <p>Des conseils, des guides pratiques, des comparatifs produits, et des astuces pour bichonner votre petit chien au quotidien.</p>
+
+    <h3>À qui s’adresse ce blog ?</h3>
+    <p>À tous les amoureux de petits chiens qui veulent allier style et bien-être pour leur compagnon.</p>
+
+    <h3>Proposez-vous des liens affiliés ?</h3>
+    <p>Oui, certains liens peuvent être affiliés. Cela nous permet de continuer à vous proposer du contenu gratuit sans frais supplémentaires pour vous !</p>
+  </section>
+
+  <section class="fade-in" style="text-align: center; margin-top: 50px;">
+    <a href="/newsletter.html" class="btn">Recevoir nos astuces exclusives ✉️</a>
+  </section>
+
+</main>
+
+<footer class="fade-in">
+  <p>&copy; 2025 ToutouStyle. Tous droits réservés.</p>
+  <p>
+    <a href="/politique-confidentialite.html">Politique de confidentialité</a> | 
+    <a href="/mentions-legales.html">Mentions légales</a>
+  </p>
+</footer>
 
 </body>
 </html>
