--- a/article-laisses.html
+++ b/article-laisses.html
@@ -1,57 +1,80 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>5 laisses stylées à moins de 20€</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>5 laisses stylées à moins de 20€ | ToutouStyle</title>
+  <meta name="description" content="Découvrez notre sélection de 5 laisses stylées à moins de 20€ pour petits chiens : sécurité, confort et design tendance au meilleur prix." />
+  <link rel="stylesheet" href="style.css" />
 
+  <!-- Open Graph -->
+  <meta property="og:title" content="5 laisses stylées à moins de 20€ | ToutouStyle" />
+  <meta property="og:description" content="Laissez-vous guider par notre top 5 des laisses abordables et stylées pour petits chiens." />
+  <meta property="og:image" content="https://a.media-amazon.com/images/I/71CDma5CXhL._AC_SL1500_.jpg" />
+  <meta property="og:url" content="https://www.toutoustyle.fr/articles/laisses-moins-20" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="5 laisses stylées à moins de 20€ | ToutouStyle" />
+  <meta name="twitter:description" content="Comparez les meilleures laisses pas chères pour petits chiens. Confort, style et sécurité réunis." />
+  <meta name="twitter:image" content="https://a.media-amazon.com/images/I/71CDma5CXhL._AC_SL1500_.jpg" />
 </head>
-<body>
 
+<body>
   <header>
-    <h1>5 laisses stylées à moins de 20€</h1>
+    <h1>🐶 5 laisses stylées à moins de 20€</h1>
+    <p>Parce que votre petit chien mérite style, sécurité et confort à prix mini 🐾</p>
   </header>
 
-  <div class="container">
+  <main class="container">
+    <!-- Produit 1 -->
+    <article class="produit" itemscope itemtype="https://schema.org/Product">
+      <h2 itemprop="name">🐾 Laisse réfléchissante avec poignée rembourrée – <span itemprop="brand">Taglory</span></h2>
+      <img src="https://a.media-amazon.com/images/I/71CDma5CXhL._AC_SL1500_.jpg" alt="Laisse réfléchissante Taglory" loading="lazy" itemprop="image" />
+      <p itemprop="description">Laisse de 1,5 m avec fils réfléchissants et poignée confort. Idéale pour les balades nocturnes.</p>
+      <a href="https://amzn.to/3YfmG3p" target="_blank" rel="noopener" class="bouton" itemprop="offers" itemscope itemtype="https://schema.org/Offer">
+        <meta itemprop="price" content="19.99" />
+        <meta itemprop="priceCurrency" content="EUR" />
+        Voir sur Amazon
+      </a>
+    </article>
 
-    <div class="produit">
-      <h2>🐾 1. Laisse en nylon réfléchissante avec poignée rembourrée – Taglory</h2>
-      <img src="https://a.media-amazon.com/images/I/71CDma5CXhL._AC_SL1500_.jpg" alt="Laisse colorée">
-      <p>Cette laisse de 1,5 m est dotée de fils réfléchissants pour une meilleure visibilité nocturne et d'une poignée rembourrée pour un confort optimal lors des promenades.</p>
-      <a href="https://amzn.to/3YfmG3p" target="_blank" class="bouton">Voir sur Amazon</a>
+    <!-- Produit 2 -->
+    <article class="produit">
+      <h2>🐾 Laisse en corde résistante – Candure</h2>
+      <img src="https://a.media-amazon.com/images/I/71jAt9ux7yL._AC_SL1500_.jpg" alt="Laisse en corde Candure" loading="lazy" />
+      <p>Pour chiens de toutes tailles, poignée rembourrée et durabilité assurée avec 1,2 m de longueur.</p>
+      <a href="https://amzn.to/44HZChv" target="_blank" rel="noopener" class="bouton">Voir sur Amazon</a>
+    </article>
+
+    <!-- Produit 3 -->
+    <article class="produit">
+      <h2>🐾 Laisse rétractable 5 m – Flexi New Classic</h2>
+      <img src="https://a.media-amazon.com/images/I/71LjBOHiamS._AC_SL1500_.jpg" alt="Laisse rétractable Flexi" loading="lazy" />
+      <p>Offre 5 m de liberté avec un système de freinage rapide. Idéal pour petits chiens jusqu'à 15 kg.</p>
+      <a href="https://amzn.to/3YhdGL1" target="_blank" rel="noopener" class="bouton">Voir sur Amazon</a>
+    </article>
+
+    <!-- Produit 4 -->
+    <article class="produit">
+      <h2>🐾 Laisse double face réfléchissante – Joytale</h2>
+      <img src="https://a.media-amazon.com/images/I/81vBpDXuYbL._AC_SL1500_.jpg" alt="Laisse double face Joytale" loading="lazy" />
+      <p>Longueur 1,2 m, visibilité de nuit et poignée molletonnée. Un top choix pour la sécurité.</p>
+      <a href="https://amzn.to/3RAOWJZ" target="_blank" rel="noopener" class="bouton">Voir sur Amazon</a>
+    </article>
+
+    <!-- Produit 5 -->
+    <article class="produit">
+      <h2>🐾 Laisse motif géométrique – Suredoo</h2>
+      <img src="https://a.media-amazon.com/images/I/81p6tnroA+S._AC_SL1500_.jpg" alt="Laisse motif géométrique Suredoo" loading="lazy" />
+      <p>Look stylé avec motif tendance, anneaux en D et 1,2 m de confort pour petits chiens.</p>
+      <a href="https://amzn.to/42rqReW" target="_blank" rel="noopener" class="bouton">Voir sur Amazon</a>
+    </article>
+
+    <!-- Retour blog -->
+    <div style="margin-top: 30px;">
+      <a href="blog.html" class="back">← Retour au blog</a>
     </div>
-
-    <div class="produit">
-      <h2>🐾 2. Laisse en corde résistante avec poignée souple – Candure</h2>
-      <img src="https://a.media-amazon.com/images/I/71jAt9ux7yL._AC_SL1500_.jpg" alt="Laisse bohème">
-      <p>Conçue pour les chiens de toutes tailles, cette laisse en corde de 1,2 m offre une prise en main confortable grâce à sa poignée rembourrée et assure une grande résistance.</p>
-      <a href="https://amzn.to/44HZChv" target="_blank" class="bouton">Voir sur Amazon</a>
-    </div>
-
-    <div class="produit">
-      <h2>🐾 3. Laisse rétractable 5 m – Flexi New Classic</h2>
-      <img src="https://a.media-amazon.com/images/I/71LjBOHiamS._AC_SL1500_.jpg" alt="Laisse réfléchissante">
-      <p>Cette laisse à enrouleur de 5 m convient aux chiens jusqu'à 15 kg. Elle offre une liberté de mouvement tout en gardant le contrôle, avec un design ergonomique.</p>
-      <a href="https://amzn.to/3YhdGL1" target="_blank" class="bouton">Voir sur Amazon</a>
-    </div>
-
-    <div class="produit">
-      <h2>🐾 4. Laisse en nylon double face réfléchissante – Joytale</h2>
-      <img src="https://a.media-amazon.com/images/I/81vBpDXuYbL._AC_SL1500_.jpg" alt="Laisse fleurs">
-      <p> Avec sa conception double face réfléchissante, cette laisse de 1,2 m assure une visibilité accrue. Sa poignée rembourrée offre un confort supplémentaire.</p>
-      <a href="https://amzn.to/3RAOWJZ" target="_blank" class="bouton">Voir sur Amazon</a>
-    </div>
-
-    <div class="produit">
-      <h2>🐾 5. Laisse en nylon réglable avec motif géométrique – Suredoo</h2>
-      <img src="https://a.media-amazon.com/images/I/81p6tnroA+S._AC_SL1500_.jpg" alt="Laisse nylon">
-      <p>Cette laisse de 1,2 m arbore un motif géométrique tendance. Elle est équipée de deux anneaux en D pour une polyvalence d'utilisation.</p>
-      <a href="https://amzn.to/42rqReW" target="_blank" class="bouton">Voir sur Amazon</a>
-    </div>
-
-    <a href="blog.html" class="back">← Retour au blog</a>
-  </div>
-
+  </main>
 </body>
 </html>
