--- a/article-harnais.html
+++ b/article-harnais.html
@@ -3,39 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comment bien choisir un harnais pour petit chien</title>
+  <title>Comment bien choisir un harnais pour petit chien | ToutouStyle</title>
+  <meta name="description" content="Découvrez nos conseils pratiques pour bien choisir un harnais confortable et sécurisé pour votre petit chien. Astuces, matières, tailles et recommandations.">
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Comment bien choisir un harnais pour petit chien | ToutouStyle">
+  <meta property="og:description" content="Tous nos conseils pour trouver le harnais idéal pour votre petit chien. Confort, sécurité, matières, ajustement... Tout y est !">
+  <meta property="og:image" content="https://a.media-amazon.com/images/I/71UhYWBbKOL._AC_SL1500_.jpg">
+  <meta property="og:url" content="https://www.toutoustyle.com/blog/choisir-harnais-petit-chien">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Comment bien choisir un harnais pour petit chien | ToutouStyle">
+  <meta name="twitter:description" content="Découvrez comment bien choisir un harnais pour petit chien : astuces et conseils pratiques.">
+  <meta name="twitter:image" content="https://a.media-amazon.com/images/I/71UhYWBbKOL._AC_SL1500_.jpg">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
   <header>
-    <h1>Comment bien choisir un harnais pour petit chien</h1>
+    <h1>Comment bien choisir un harnais pour petit chien 🐾</h1>
   </header>
 
   <div class="container">
-    <p>Un bon harnais peut faire toute la différence pour le confort et la sécurité de ton petit chien. Voici les critères à garder en tête pour faire le bon choix 🐶👇</p>
+    <p>Un bon harnais peut faire toute la différence pour le confort et la sécurité de ton petit chien. Voici les critères à garder en tête pour faire le bon choix 👇</p>
 
-    <h2>1. Taille et ajustement</h2>
-    <p>Le harnais doit être bien ajusté : ni trop serré, ni trop lâche. Privilégie les modèles réglables pour suivre la croissance de ton chien.</p>
+    <section class="criteres">
+      <h2>1. Taille et ajustement</h2>
+      <p>Le harnais doit être bien ajusté : ni trop serré, ni trop lâche. Privilégie les modèles réglables pour suivre la croissance de ton chien.</p>
 
-    <h2>2. Confort et matières</h2>
-    <p>Choisis un harnais rembourré, doux, et respirant. Le néoprène ou le mesh sont souvent de bons choix pour éviter les irritations.</p>
+      <h2>2. Confort et matières</h2>
+      <p>Choisis un harnais rembourré, doux et respirant. Le néoprène ou le mesh sont parfaits pour éviter les frottements et irritations.</p>
 
-    <h2>3. Type de fixation</h2>
-    <p>Pour un petit chien, un harnais avec attache dorsale est souvent suffisant. Si ton chien tire beaucoup, regarde du côté des modèles avec attache frontale.</p>
+      <h2>3. Type de fixation</h2>
+      <p>Pour un petit chien, une fixation dorsale est idéale. Si ton chien a tendance à tirer, préfère un modèle à fixation frontale pour mieux le guider.</p>
 
-    <h2>4. Facilité d’enfilage</h2>
-    <p>Certains harnais sont plus faciles à enfiler que d’autres (notamment ceux qui s’enfilent par la tête). Teste ce qui fonctionne le mieux pour toi et ton toutou.</p>
+      <h2>4. Facilité d’enfilage</h2>
+      <p>Certains harnais sont très pratiques : ils s’enfilent rapidement par la tête. Gagne du temps et minimise le stress pour ton toutou !</p>
+    </section>
 
-    <img src="https://a.media-amazon.com/images/I/71UhYWBbKOL._AC_SL1500_.jpg" alt="Harnais pour petit chien" />
-
-    <p>👉 Voici un harnais adapté aux petits chiens, bien noté et confortable :</p>
-
-    <a href="https://amzn.to/3YO4Lkp" target="_blank" class="bouton">Voir ce harnais sur Amazon</a> <br>
+    <div class="produit">
+      <img src="https://a.media-amazon.com/images/I/71UhYWBbKOL._AC_SL1500_.jpg" alt="Harnais pour petit chien" />
+      <p>👉 Voici un harnais top qualité recommandé pour les petits chiens :</p>
+      <a href="https://amzn.to/3YO4Lkp" target="_blank" class="bouton">Voir ce harnais sur Amazon</a>
+    </div>
 
     <a href="blog.html" class="back">← Retour au blog</a>
   </div>
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BlogPosting",
+    "headline": "Comment bien choisir un harnais pour petit chien",
+    "description": "Conseils pour choisir le harnais parfait pour votre petit chien : taille, matières, confort et sécurité.",
+    "image": "https://a.media-amazon.com/images/I/71UhYWBbKOL._AC_SL1500_.jpg",
+    "author": {
+      "@type": "Organization",
+      "name": "ToutouStyle"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "ToutouStyle",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://www.toutoustyle.com/logo.png"
+      }
+    },
+    "url": "https://www.toutoustyle.com/blog/choisir-harnais-petit-chien",
+    "datePublished": "2024-04-28"
+  }
+  </script>
 
 </body>
 </html>
