--- a/article-colliers.html
+++ b/article-colliers.html
@@ -3,40 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comparatif : Colliers pour petit chien</title>
+  <title>Comparatif : Colliers pour petit chien | ToutouStyle</title>
+  <meta name="description" content="Découvrez notre comparatif des meilleurs colliers pour petits chiens : cuir, nylon personnalisable, modèles réfléchissants et confortables.">
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Comparatif : Colliers pour petit chien | ToutouStyle">
+  <meta property="og:description" content="Choisissez le meilleur collier pour votre petit chien grâce à notre sélection testée et approuvée. Confort, sécurité et style au rendez-vous !">
+  <meta property="og:image" content="https://a.media-amazon.com/images/I/71qRkNTyULL._AC_SL1500_.jpg">
+  <meta property="og:url" content="https://www.toutoustyle.com/blog/comparatif-colliers-petit-chien">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Comparatif : Colliers pour petit chien | ToutouStyle">
+  <meta name="twitter:description" content="Découvrez notre comparatif des meilleurs colliers pour petits chiens : confort, style, sécurité.">
+  <meta name="twitter:image" content="https://a.media-amazon.com/images/I/71qRkNTyULL._AC_SL1500_.jpg">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
-    <h1>Comparatif : Colliers pour petit chien</h1>
+    <h1>Comparatif 🐾 Colliers pour petit chien</h1>
   </header>
 
   <div class="container">
 
-    <div class="produit">
+    <section class="produit">
       <h2>🐶 1. Collier en cuir réglable – TagME</h2>
       <img src="https://a.media-amazon.com/images/I/71qRkNTyULL._AC_SL1500_.jpg" alt="Collier cuir TagME">
-      <p>Ce collier en cuir véritable est confortable, durable et élégant. Parfait pour les petits chiens avec un tour de cou de 20 à 30 cm.</p>
+      <p>Collier en cuir véritable, parfait pour les petits chiens. Confortable, élégant et durable. Ajustable pour les cous de 20 à 30 cm.</p>
       <a href="https://amzn.to/3EAUuBo" target="_blank" class="bouton">Voir sur Amazon</a>
-    </div>
+    </section>
 
-    <div class="produit">
+    <section class="produit">
       <h2>🐶 2. Collier en nylon personnalisé – PetArtist</h2>
       <img src="https://a.media-amazon.com/images/I/712EK3yTMyL._AC_SL1500_.jpg" alt="Collier nylon personnalisable">
-      <p>Un collier léger, personnalisable avec le nom du chien et un numéro. Disponible en plusieurs couleurs et tailles pour petits chiens.</p>
+      <p>Ultra léger, ce collier est personnalisable avec le prénom et ton numéro de téléphone. Disponible en plusieurs tailles et couleurs pour petits chiens stylés.</p>
       <a href="https://amzn.to/3GsQy6j" target="_blank" class="bouton">Voir sur Amazon</a>
-    </div>
+    </section>
 
-    <div class="produit">
+    <section class="produit">
       <h2>🐶 3. Collier réfléchissant avec boucle sécurité – Joytale</h2>
       <img src="https://a.media-amazon.com/images/I/81xK-eGeXyL._AC_SL1500_.jpg" alt="Collier réfléchissant Joytale">
-      <p>Collier résistant et sécuritaire avec bandes réfléchissantes, parfait pour les balades nocturnes. Taille XS idéale pour petits chiens.</p>
+      <p>Idéal pour les promenades nocturnes, ce collier réfléchissant est équipé d'une boucle de sécurité. Taille XS parfaitement adaptée aux petits chiens.</p>
       <a href="https://amzn.to/4cPbsIE" target="_blank" class="bouton">Voir sur Amazon</a>
-    </div>
+    </section>
 
     <a href="blog.html" class="back">← Retour au blog</a>
   </div>
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BlogPosting",
+    "headline": "Comparatif : Colliers pour petit chien",
+    "description": "Sélection des meilleurs colliers pour petits chiens : confort, style et sécurité garantis.",
+    "image": "https://a.media-amazon.com/images/I/71qRkNTyULL._AC_SL1500_.jpg",
+    "author": {
+      "@type": "Organization",
+      "name": "ToutouStyle"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "ToutouStyle",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://www.toutoustyle.com/logo.png"
+      }
+    },
+    "url": "https://www.toutoustyle.com/blog/comparatif-colliers-petit-chien",
+    "datePublished": "2024-04-28"
+  }
+  </script>
 
 </body>
 </html>
